Optimized react components

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://mustafak78677.github.io/box-office",
   "name": "box-office",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
